# rspack-resolver

./: .gitignore  .prettierignore  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  check_chrome_layer_api.py  check_trace.py  check_trace_config.py  deny.toml  fix_span_ids.py  fix_with_json_layer.py  generate_chrome_trace_ids.py  merge_spans.py  package.json  pnpm-lock.yaml  rstest.config.mjs  rstest.config.resolver.mjs  rust-toolchain.toml  summary.md  test_chrome_trace.py  test_root_id.py  test_trace.rs  test_tracing_ids.py  test_tracing_instrument.py  test_with_span_links.py  trace_merged.json  trace_with_ids.json  trace_with_ids_fixed.json  tracing_layers_comparison.md
.github/: SECURITY.md  renovate.json5
benches/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  resolver.rs  resolver_gungraun.rs  specifier.rs
bindings/: .gitignore
examples/: README.md  resolver.rs  resolver_backup.rs  resolver_fixed.rs
fuzz/: Cargo.toml
napi/: Cargo.toml  index.d.ts  index.js  resolver.wasi.cjs  wasi-worker-browser.mjs
napi/__test__/: resolver.spec.mjs  resolver.test.mjs
napi/src/: lib.rs  options.rs
napi/tests/: browserField.test.mjs  exportsField.test.mjs  extension-alias.test.mjs  extensions.test.mjs  importsField.test.mjs  incorrect-description-file.test.mjs  options.test.mjs  resolve.test.mjs  restrictions.test.mjs  roots.test.mjs  scoped-packages.test.mjs  tsconfig-paths.test.mjs
npm/: README.md  package.json
scripts/: convert-trace.py  json-to-chrome-trace.py  prepublish.mjs  publish.mjs  x.mjs
src/: alias_trie.rs  cache.rs  context.rs  (+11 more)
(+94 files in other folders)
